# AI-Native-Book-Backend

./: README.md  dockerfile  main.py  pyproject.toml  requirements.txt
backend/: README.md  ingest.py  main.py  requirements.txt
backend/src/api/: main.py
backend/src/ingestion/: ingest.py
