[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.2.2",
    "langchain-groq>=1.1.1",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "markdown>=3.6",
    "openai>=1.47.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "pytz>=2025.2",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.8.0",
    "torch>=2.9.1",
    "tqdm>=4.66.5",
    "uvicorn[standard]>=0.30.6",
]
